--- a/style.css
+++ b/style.css
@@ -111,18 +111,68 @@ body {
     color: #333333;
 }
 
-#top-content span, h2 {
+#top-content span, #top-content h2 {
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
 #medical-details {
-    margin: 0 5%;
+    margin: 50px 7%;
 }
 
-#medical-details div {
-    padding: 3%;
-    margin-top: 3%;
-    border-radius: 3%;
+#medical-details > div {
+    padding: 30px;
+    margin-top: 20px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
     background-color: #FFFFFF;
+}
+
+#medical-details h2 {
+    font-size: 25px;
+    font-weight: bold;
+    color: #333333;
+    margin-top: 5px;
+    margin-bottom: auto;
+}
+
+
+#medical-details .record-item {
+    padding: 10px;
+    margin-top: 20px;
+    margin-right: 15px;
+    border: rgba(0, 0, 0, 0.1) 1px solid;
+    border-radius: 10px;
+    display: flex;
+}
+
+#medical-details .medication-image {
+    width: 140px;
+    height: 96px;
+    margin-right: 20px;
+    border-radius: 10px;
+}
+
+#medical-details .medication-title {
+    font-size: 19px;
+    color: #333333;
+    font-weight: bold;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+#medical-details span {
+    word-break: break-all;
+}
+
+#medical-details .medication-date {
+    font-size: 15px;
+    color: #666666;
+    margin-bottom: 10px;
+}
+
+#medical-details .medication-details {
+    font-size: 15px;
+    color: #666666;
+    margin-bottom: 10px;
 }
