--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body {
 
 
 #medical-details .record-item {
-    padding: 10px;
+    padding: 20px;
     margin-top: 20px;
     margin-right: 15px;
     border: rgba(0, 0, 0, 0.1) 1px solid;
@@ -146,14 +146,16 @@ body {
     display: flex;
 }
 
-#medical-details .medication-image {
+#medical-details .record-image {
     width: 140px;
     height: 96px;
     margin-right: 20px;
+    margin-bottom: 10px;
+    object-fit: cover;
     border-radius: 10px;
 }
 
-#medical-details .medication-title {
+#medical-details .record-title {
     font-size: 19px;
     color: #333333;
     font-weight: bold;
@@ -165,13 +167,13 @@ body {
     word-break: break-all;
 }
 
-#medical-details .medication-date {
+#medical-details .record-date {
     font-size: 15px;
     color: #666666;
     margin-bottom: 10px;
 }
 
-#medical-details .medication-details {
+#medical-details .record-details {
     font-size: 15px;
     color: #666666;
     margin-bottom: 10px;
